[FIX] mail: more visible message bubble in inbox dark theme
In inbox, messages are displayed in a card layout, with each
item having bg-view background.

This is white in white theme so constrast stay good in white
theme. In dark theme however, this is gray and blue bubble
is also close to grey, thus resulting to bubble being barely
visible.

This commit fixes the issue by slightly darkening the background
of cards in dark theme, and also removing the border around
messages in dark theme only outside of cards.

--- a/addons/mail/static/src/core/common/message.dark.scss
+++ b/addons/mail/static/src/core/common/message.dark.scss
@@ -1,3 +1,7 @@
+.o-mail-Message.o-card {
+    background-color: mix($gray-100, $gray-200);
+}
+
 .o-mail-Message-author {
     opacity: 75%;
 }
@@ -7,7 +11,9 @@
 }
 
 .o-mail-Message-bubble {
-    --border-opacity: 0;
+    .o-mail-Message:not(.o-card) & {
+        --border-opacity: 0;
+    }
 
     &.o-blue {
         background-color: mix($gray-100, $info, 87.5%) !important;
